--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
     "next-sanity": "^4.1.5",
